force-app/main/default/objects/Case/fields/Account_Manager_Email__c.field-meta.xml
<CustomField>
    <fullName>Account_Manager_Email__c</fullName>
    <description>To be used for emailing Key account updates to account managers</description>
    <label>Account Manager Email</label>
    <type>Email</type>
</CustomField>