force-app/main/default/objects/Case/fields/amazonconnect__AC_Contact_Id__c.field-meta.xml
<CustomField>
    <fullName>amazonconnect__AC_Contact_Id__c</fullName>
    <description>The Contact ID that Amazon Connects assigns to a call. Should only be set by the call flows through the Lambda Functions.</description>
    <externalId>true</externalId>
    <label>Amazon Connect Contact Id</label>
    <length>50</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>