force-app/main/default/objects/Case/fields/Auto_Email_Sent__c.field-meta.xml
<CustomField>
    <fullName>Auto_Email_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Currently only used for the Missed Collection created email in the case auto email process builder</description>
    <label>Auto Email Sent</label>
    <type>Checkbox</type>
</CustomField>