force-app/main/default/objects/Case/fields/Case_Case_Safe_IF__c.field-meta.xml
<CustomField>
    <fullName>Case_Case_Safe_IF__c</fullName>
    <formula>CASESAFEID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Case Case Safe IF</label>
    <type>Text</type>
</CustomField>