force-app/main/default/objects/Case/fields/closedatetext__c.field-meta.xml
<CustomField>
    <fullName>closedatetext__c</fullName>
    <formula>TEXT(ClosedDate)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>closedatetext</label>
    <type>Text</type>
</CustomField>