force-app/main/default/objects/Case/fields/Collection_Completed_No_Waste__c.field-meta.xml
<CustomField>
    <fullName>Collection_Completed_No_Waste__c</fullName>
    <description>This field is used for auto emails</description>
    <formula>AND(
ISPICKVAL(Type , &quot;Missed Collection&quot;),
Completed_by_DriverApp__c = TRUE,
Driver_found_material__c = FALSE,
Location__r.IsNational__c = FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Collection Completed No Waste</label>
    <type>Checkbox</type>
</CustomField>