force-app/main/default/objects/Case/fields/Collection_Schedule__c.field-meta.xml
<CustomField>
    <fullName>Collection_Schedule__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Collection Schedule</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.Location__c</field>
            <operation>equals</operation>
            <valueField>Schedule__c.Location__r.Id</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Schedule__c</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>