force-app/main/default/objects/Case/fields/Completed_by_DriverApp__c.field-meta.xml
<CustomField>
    <fullName>Completed_by_DriverApp__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Marked as true if driver presses &quot;complete&quot; on the DriverApp job.</description>
    <label>Completed by DriverApp</label>
    <type>Checkbox</type>
</CustomField>