force-app/main/default/objects/Case/fields/Council__c.field-meta.xml
<CustomField>
    <fullName>Council__c</fullName>
    <label>Council</label>
    <length>100</length>
    <type>Text</type>
</CustomField>