force-app/main/default/objects/Case/fields/CP_ID__c.field-meta.xml
<CustomField>
    <fullName>CP_ID__c</fullName>
    <label>CP ID</label>
    <type>TextArea</type>
</CustomField>