force-app/main/default/objects/Case/fields/Created_within_last_4_weeks__c.field-meta.xml
<CustomField>
    <fullName>Created_within_last_4_weeks__c</fullName>
    <description>Checks if case has been created within last 4 weeks</description>
    <formula>( TODAY() - DATEVALUE(CreatedDate) ) &lt;= 28</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Created within last 4 weeks</label>
    <type>Checkbox</type>
</CustomField>