force-app/main/default/objects/Case/fields/CreatedByDriverApp__c.field-meta.xml
<CustomField>
    <fullName>CreatedByDriverApp__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Ticked by driverApp when cases are created.</description>
    <label>CreatedByDriverApp?</label>
    <type>Checkbox</type>
</CustomField>