force-app/main/default/objects/Case/fields/Credit_Full_Invoice__c.field-meta.xml
<CustomField>
    <fullName>Credit_Full_Invoice__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Tick this box if you would like the entire invoice to be credited</inlineHelpText>
    <label>Credit Full Invoice</label>
    <type>Checkbox</type>
</CustomField>