force-app/main/default/objects/Case/fields/Credit_Raised__c.field-meta.xml
<CustomField>
    <fullName>Credit_Raised__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>For CS Management - tick this box when the credit is raised. if the request is refused - don&apos;t tick this box. close the case and leave a post explaining</inlineHelpText>
    <label>Credit Raised</label>
    <type>Checkbox</type>
</CustomField>