force-app/main/default/objects/Case/fields/CSAT_Sent__c.field-meta.xml
<CustomField>
    <fullName>CSAT_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CSAT Sent</label>
    <type>Checkbox</type>
</CustomField>