force-app/main/default/objects/Case/fields/Customer_Ops_Complaint_Response__c.field-meta.xml
<CustomField>
    <fullName>Customer_Ops_Complaint_Response__c</fullName>
    <label>Customer Ops Complaint Response</label>
    <length>250</length>
    <type>Text</type>
</CustomField>