force-app/main/default/objects/Case/fields/Date_of_quality_check__c.field-meta.xml
<CustomField>
    <fullName>Date_of_quality_check__c</fullName>
    <label>Date of quality check</label>
    <type>Date</type>
</CustomField>