force-app/main/default/objects/Case/fields/Date_Time_Assigned_to_Opps__c.field-meta.xml
<CustomField>
    <fullName>Date_Time_Assigned_to_Opps__c</fullName>
    <label>Date/Time Assigned to Opps</label>
    <type>DateTime</type>
</CustomField>