force-app/main/default/objects/Case/fields/Date_Time_Closed_by_Opps__c.field-meta.xml
<CustomField>
    <fullName>Date_Time_Closed_by_Opps__c</fullName>
    <label>Date/Time Closed by Opps</label>
    <type>DateTime</type>
</CustomField>