force-app/main/default/objects/Case/fields/Days__c.field-meta.xml
<CustomField>
    <fullName>Days__c</fullName>
    <formula>IF(INCLUDES( Collection_Schedule__r.Days__c , &quot;Monday&quot;), &quot;Monday&quot;+BR(), NULL) + 
IF(INCLUDES( Collection_Schedule__r.Days__c , &quot;Tuesday&quot;), &quot;Tuesday&quot;+BR(), NULL) + 
IF(INCLUDES( Collection_Schedule__r.Days__c , &quot;Wednesday&quot;), &quot;Wednesday&quot;+BR(), NULL) + 
IF(INCLUDES( Collection_Schedule__r.Days__c , &quot;Thursday&quot;), &quot;Thursday&quot;+BR(), NULL)  + 
IF(INCLUDES( Collection_Schedule__r.Days__c , &quot;Friday&quot;), &quot;Friday&quot;+BR(), NULL)  + 
IF(INCLUDES( Collection_Schedule__r.Days__c , &quot;Saturday&quot;), &quot;Saturday&quot;+BR(), NULL)  + 
IF(INCLUDES( Collection_Schedule__r.Days__c , &quot;Sunday&quot;), &quot;Sunday&quot;, NULL)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days</label>
    <type>Text</type>
</CustomField>