force-app/main/default/objects/Case/fields/Delivery_Feedback__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Feedback__c</fullName>
    <description>Delivery feedback from order</description>
    <label>Delivery Feedback</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>