force-app/main/default/objects/Case/fields/Delivery_Query_Order__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Query_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The order related to the delivery query. Populated by del que process.</description>
    <label>Delivery Query Order</label>
    <referenceTo>Order</referenceTo>
    <relationshipLabel>Orders</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>