force-app/main/default/objects/Case/fields/Delivery_Query_Reason__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Query_Reason__c</fullName>
    <description>This is populated from a process called : Generate new case from order failed, from the reason in the order record that the case is created from.</description>
    <label>Delivery Query Reason</label>
    <length>30</length>
    <type>Text</type>
</CustomField>