force-app/main/default/objects/Case/fields/Delivery_Query_reason_decode__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Query_reason_decode__c</fullName>
    <description>This populates from the process called : Generate new case from order failed from the order record that caused the query.</description>
    <label>Delivery Query reason decode</label>
    <length>200</length>
    <type>Text</type>
</CustomField>