force-app/main/default/objects/Case/fields/Discussed_Additional_Service_on_Call__c.field-meta.xml
<CustomField>
    <fullName>Discussed_Additional_Service_on_Call__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Discussed Additional Service on Call</label>
    <type>Checkbox</type>
</CustomField>