force-app/main/default/objects/Case/fields/Driver_found_material__c.field-meta.xml
<CustomField>
    <fullName>Driver_found_material__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Driver found material?</label>
    <type>Checkbox</type>
</CustomField>