force-app/main/default/objects/Case/fields/Driver_Mobile__c.field-meta.xml
<CustomField>
    <fullName>Driver_Mobile__c</fullName>
    <formula>Round_Dispatched__r.DriverId__r.Mobile__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Driver Mobile</label>
    <type>Text</type>
</CustomField>