force-app/main/default/objects/Case/fields/Extra_Collected_By_Round_for_Anton__c.field-meta.xml
<CustomField>
    <fullName>Extra_Collected_By_Round_for_Anton__c</fullName>
    <description>Anton fills in here what round he sends to collect an extra job</description>
    <label>Extra Collected By (Round for Anton)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>