force-app/main/default/objects/Case/fields/Fine_Amount_Paid__c.field-meta.xml
<CustomField>
    <fullName>Fine_Amount_Paid__c</fullName>
    <label>Fine - Amount Paid</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>