force-app/main/default/objects/Case/fields/Fine_Date__c.field-meta.xml
<CustomField>
    <fullName>Fine_Date__c</fullName>
    <label>Fine - Date</label>
    <type>Date</type>
</CustomField>