force-app/main/default/objects/Case/fields/Fine_Date_of_Offence__c.field-meta.xml
<CustomField>
    <fullName>Fine_Date_of_Offence__c</fullName>
    <label>Fine - Date of Offence</label>
    <type>Date</type>
</CustomField>