force-app/main/default/objects/Case/fields/Fine_Date_Paid__c.field-meta.xml
<CustomField>
    <fullName>Fine_Date_Paid__c</fullName>
    <label>Fine - Date Paid</label>
    <type>Date</type>
</CustomField>