force-app/main/default/objects/Case/fields/Fine_Date_Received__c.field-meta.xml
<CustomField>
    <fullName>Fine_Date_Received__c</fullName>
    <label>Fine - Date Received</label>
    <type>Date</type>
</CustomField>