force-app/main/default/objects/Case/fields/Fine_FPN_Number__c.field-meta.xml
<CustomField>
    <fullName>Fine_FPN_Number__c</fullName>
    <label>Fine - FPN Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>