force-app/main/default/objects/Case/fields/Fine_Paid__c.field-meta.xml
<CustomField>
    <fullName>Fine_Paid__c</fullName>
    <label>Fine - Paid</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>