force-app/main/default/objects/Case/fields/Fine_Payment_Reference__c.field-meta.xml
<CustomField>
    <fullName>Fine_Payment_Reference__c</fullName>
    <label>Fine - Payment Reference</label>
    <length>100</length>
    <type>Text</type>
</CustomField>