force-app/main/default/objects/Case/fields/Fine_Reason_for_Fine__c.field-meta.xml
<CustomField>
    <fullName>Fine_Reason_for_Fine__c</fullName>
    <label>Fine - Reason for Fine</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Agree to pay despite evidence</fullName>
            </value>
            <value>
                <fullName>Fly-tipping</fullName>
                <label>Section 33 (FPN Flytipping)</label>
            </value>
            <value>
                <fullName>Failure to Produce WTN</fullName>
                <label>Section 34 (FPN Waste Transfer Note)</label>
            </value>
            <value>
                <fullName>Section 47 (FPN - Time Bands)</fullName>
            </value>
            <value>
                <fullName>Section 23 (PCN - Time Bands)</fullName>
            </value>
            <value>
                <fullName>Driver Late</fullName>
                <isActive>false</isActive>
                <label>Driver Late</label>
            </value>
            <value>
                <fullName>Driver Missed</fullName>
                <isActive>false</isActive>
                <label>Driver Missed</label>
            </value>
            <value>
                <fullName>Outside of council time bounds</fullName>
                <isActive>false</isActive>
                <label>Outside of council time bounds</label>
            </value>
            <value>
                <fullName>Section 33 (FPN - Flytipping)</fullName>
                <isActive>false</isActive>
                <label>Section 33 (FPN - Flytipping)</label>
            </value>
            <value>
                <fullName>Section 34 (FPN - Waste Transfer Note)</fullName>
                <isActive>false</isActive>
                <label>Section 34 (FPN - Waste Transfer Note)</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>