force-app/main/default/objects/Case/fields/FPN_PCN_Reference__c.field-meta.xml
<CustomField>
    <fullName>FPN_PCN_Reference__c</fullName>
    <description>For council fines</description>
    <label>FPN/PCN Reference</label>
    <length>30</length>
    <type>Text</type>
</CustomField>