force-app/main/default/objects/Case/fields/gaconnector_Device__c.field-meta.xml
<CustomField>
    <fullName>gaconnector_Device__c</fullName>
    <label>Device</label>
    <length>255</length>
    <type>Text</type>
</CustomField>