force-app/main/default/objects/Case/fields/gaconnector_First_Click_Channel__c.field-meta.xml
<CustomField>
    <fullName>gaconnector_First_Click_Channel__c</fullName>
    <label>First Click Channel</label>
    <length>255</length>
    <type>Text</type>
</CustomField>