force-app/main/default/objects/Case/fields/gaconnector_Latitude_from_IP__c.field-meta.xml
<CustomField>
    <fullName>gaconnector_Latitude_from_IP__c</fullName>
    <label>Latitude (from IP)</label>
    <precision>18</precision>
    <scale>9</scale>
    <type>Number</type>
</CustomField>