force-app/main/default/objects/Case/fields/gaconnector_Location_approx__c.field-meta.xml
<CustomField>
    <fullName>gaconnector_Location_approx__c</fullName>
    <formula>HYPERLINK(&quot;https://maps.google.com/maps?q=loc:&quot; &amp; TEXT( gaconnector_Latitude_from_IP__c ) &amp; &quot;,&quot; &amp; TEXT( gaconnector_Longitude__c ), &quot;Open in Google Maps&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Location (approx.)</label>
    <type>Text</type>
</CustomField>