force-app/main/default/objects/Case/fields/gaconnector_Longitude__c.field-meta.xml
<CustomField>
    <fullName>gaconnector_Longitude__c</fullName>
    <label>Longitude</label>
    <precision>18</precision>
    <scale>9</scale>
    <type>Number</type>
</CustomField>