force-app/main/default/objects/Case/fields/HourstoClose__c.field-meta.xml
<CustomField>
    <fullName>HourstoClose__c</fullName>
    <formula>FLOOR((ClosedDate - CreatedDate)*24)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>HourstoClose</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>