force-app/main/default/objects/Case/fields/Instructions_For_CS__c.field-meta.xml
<CustomField>
    <fullName>Instructions_For_CS__c</fullName>
    <description>Notes to give instructions for CS Action</description>
    <label>Instructions For CS</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>