force-app/main/default/objects/Case/fields/Invoice_Header__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Header__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Invoice_Header</label>
    <referenceTo>Invoice_Header__c</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>