force-app/main/default/objects/Case/fields/Invoice_Query_Reason__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Query_Reason__c</fullName>
    <label>Invoice Query Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Incorrect Pricing</fullName>
            </value>
            <value>
                <fullName>Missed Collections/Service Issues</fullName>
            </value>
            <value>
                <fullName>Incorrect payment allocation</fullName>
            </value>
            <value>
                <fullName>Incorrect Order Quantity or Product</fullName>
            </value>
            <value>
                <fullName>Wrong PO/No PO</fullName>
            </value>
            <value>
                <fullName>Dead Location</fullName>
            </value>
            <value>
                <fullName>Wrong Parent Account</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>