force-app/main/default/objects/Case/fields/Invoice_to_Credit__c.field-meta.xml
<CustomField>
    <fullName>Invoice_to_Credit__c</fullName>
    <inlineHelpText>Enter the invoice number you&apos;d like the credit issued against</inlineHelpText>
    <label>Invoice to Credit</label>
    <length>100</length>
    <type>Text</type>
</CustomField>