force-app/main/default/objects/Case/fields/Is_supplier_missed__c.field-meta.xml
<CustomField>
    <fullName>Is_supplier_missed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is supplier missed?</label>
    <type>Checkbox</type>
</CustomField>