force-app/main/default/objects/Case/fields/IsNational__c.field-meta.xml
<CustomField>
    <fullName>IsNational__c</fullName>
    <formula>Location__r.IsNational__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>IsNational</label>
    <type>Checkbox</type>
</CustomField>