force-app/main/default/objects/Case/fields/Jotform_Images__c.field-meta.xml
<CustomField>
    <fullName>Jotform_Images__c</fullName>
    <label>Jotform Images</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>