force-app/main/default/objects/Case/fields/Location_Address__c.field-meta.xml
<CustomField>
    <fullName>Location_Address__c</fullName>
    <formula>Location__r.BillingStreet  &amp; &quot; &quot; &amp;  Location__r.BillingCity &amp; &quot; &quot; &amp;  Location__r.BillingPostalCode</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Location Address</label>
    <type>Text</type>
</CustomField>