force-app/main/default/objects/Case/fields/Missed_Collection_Age_days__c.field-meta.xml
<CustomField>
    <fullName>Missed_Collection_Age_days__c</fullName>
    <formula>Missed_Collection_Updated_Date__c - TODAY()</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Missed Collection Age (days)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>