force-app/main/default/objects/Case/fields/Missed_Collection_Updated_Date__c.field-meta.xml
<CustomField>
    <fullName>Missed_Collection_Updated_Date__c</fullName>
    <label>Missed Collection Updated Date</label>
    <type>Date</type>
</CustomField>