force-app/main/default/objects/Case/fields/Number_of_Messages_Received__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Messages_Received__c</fullName>
    <description>number of emails received on a particular Case.</description>
    <displayFormat>A-{0}</displayFormat>
    <label>Number of Messages Received</label>
    <type>AutoNumber</type>
</CustomField>