force-app/main/default/objects/Case/fields/Number_of_Messages_Sent__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Messages_Sent__c</fullName>
    <description>number of emails sent on a particular Case.</description>
    <displayFormat>A-{0}</displayFormat>
    <label>Number of Messages Sent</label>
    <type>AutoNumber</type>
</CustomField>