force-app/main/default/objects/Case/fields/Operations_Case_Status__c.field-meta.xml
<CustomField>
    <fullName>Operations_Case_Status__c</fullName>
    <label>Operations Case Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Open</fullName>
            </value>
            <value>
                <fullName>Dispatched</fullName>
            </value>
            <value>
                <fullName>Complete</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>