force-app/main/default/objects/Case/fields/Ops_Customer_Instructions__c.field-meta.xml
<CustomField>
    <fullName>Ops_Customer_Instructions__c</fullName>
    <formula>IF(Text_conversion_Ops_issue__c=&quot;Contamination&quot;,&quot;One or more of your bags or bins contains items that can&apos;t be disposed of in that stream. For example there might be food in a mixed recycling bag, plastic in a food recycling bag or electricals in your rubbish bag. We can&apos;t collect the wrong waste in the wrong bags/bins. Please re-sort as appropriate and we&apos;ll pick it up on your next scheduled collection. Or let us know if you need more info and we&apos;ll call you to discuss.&quot;,
IF(Text_conversion_Ops_issue__c=&quot;Over Weight Limit&quot;,&quot;One or more of your bags is loaded with too much waste, in excess of the weight limit printed on the bag. Please split the contents over more bags and we&apos;ll pick it up on your next scheduled collection.&quot;,
IF(Text_conversion_Ops_issue__c=&quot;Unbranded Bags&quot;,&quot;Waste in unbranded bags has been found outside your business. We can only collect waste in First Mile branded bags, and it&apos;s also illegal to put business waste on the streets in plain bags. If the waste is yours, please rebag into First Mile branded bags and we&apos;ll pick it up on your next scheduled collection.&quot;,
IF(Text_conversion_Ops_issue__c=&quot;Loose Waste in Bin&quot;,&quot;There&apos;s loose waste in your bin, and unfortunately in your area we can&apos;t lift it. Please bag all waste in all bins and we&apos;ll pick it up on your next scheduled collection. If you can&apos;t bag the waste please call us and we can arrange a lift for a small additional cost.&quot;,
IF(Text_conversion_Ops_issue__c=&quot;Excess Waste&quot;,&quot;There&apos;s waste on the floor around your bins. We can only collect waste contained in the correct bins. Please put the waste in the bins and we&apos;ll pick it up on your next scheduled collection. If you regularly have overflow, you may want to increase your bin size or collection frequency.&quot;,
IF(Text_conversion_Ops_issue__c=&quot;No Access to Collection Point&quot;,&quot;We couldn&apos;t access your collection point. If that was due to a road closure, we&apos;ll try again ASAP. If we have an issue with a key or similar, we&apos;ll be in touch soon so we can get things back on track quickly.&quot;,
IF(Text_conversion_Ops_issue__c=&quot;Cardboard presented incorrectly&quot;,&quot;There is incorrectly presented cardboard outside your business. It may be: loose, not empty/flatpacked or not be labelled with a First Mile cardboard recycling sticker. Please empty &amp; flatpack all boxes, tie or tape them into bundles of up to 5kg and label each bundle with a First Mile cardboard recycling sticker.&quot;,
IF(Text_conversion_Ops_issue__c=&quot;Delivery Query&quot;,&quot;A problem on your account is delaying your delivery.&quot;,
IF(Text_conversion_Ops_issue__c=&quot;Safety Issue&quot;,&quot;Conditions at your collection point are unsafe for our drivers. We&apos;ll be in touch very soon with more details so that your collections can be resumed&quot;,&quot;&quot;)
))))))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Ops Customer Instructions</label>
    <type>Text</type>
</CustomField>